Added landing page features

--- a/Frontend/landing/landing.html
+++ b/Frontend/landing/landing.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CryptoTradingX — Lightning-Fast Crypto Trading</title>
-  <meta name="description" content="CryptoTradingX: lightning-fast crypto trading with live WebSocket prices, quota-smart API usage, and Stripe-ready onboarding." />
-  <meta name="theme-color" content="#0ea5e9" />
-  <link rel="stylesheet" href="landing.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="/landing/landing.css" />
 </head>
 <body>
   <div class="toast-wrap" id="toasts" aria-live="polite" aria-atomic="true"></div>
 
   <header>
     <div class="container nav">
-      <a class="brand" href="#top" aria-label="CryptoTradingX home">
+      <a class="brand" href="/landing/landing.html" aria-label="CryptoTradingX home">
         <span class="logo" aria-hidden="true">💠</span>
         <span>CryptoTradingX</span>
       </a>
@@ -21,8 +19,10 @@
         <a href="#features">Features</a>
         <a href="#pricing">Pricing</a>
         <a href="#faq">FAQ</a>
-        <button class="toggle" id="demoToggle" title="Toggle Demo Mode">Demo Mode: <strong id="demoState">ON</strong></button>
-        <a class="btn" href="/auth/auth.html">Get Started</a>
+        <button class="toggle" id="demoToggle" title="Toggle Demo Mode">
+          Demo Mode: <strong id="demoState">ON</strong>
+        </button>
+        <a class="btn" id="cta-primary" href="/auth/auth.html">Get Started</a>
       </nav>
     </div>
   </header>
@@ -34,27 +34,24 @@
           <h1 class="title">Lightning-Fast Crypto Trading,<br/>Quota-Smart by Design.</h1>
           <p class="subtitle">Live WebSocket prices, Redis-assisted caching to reduce API calls, Stripe-ready checkout, and AI insights — all wired for reliability so you never hit <em>“API quota exceeded”</em> at crunch time.</p>
           <div class="cta">
-            <a href="/auth/auth.html" class="primary" id="cta-primary">Launch Web App</a>
+            <a href="#" class="primary" id="launchBtn">Launch Web App</a>
           </div>
 
           <div class="panel" style="margin-top:16px">
-            <div class="ticker" id="ticker" aria-live="polite">
-              <!-- Dynamic coins inserted here -->
-            </div>
-            <div class="statusbar" role="status" aria-live="polite">
-              <div class="status"><span class="dot ok" id="s-ws"></span> WS Feed</div>
-              <div class="status"><span class="dot ok" id="s-redis"></span> Redis Cache</div>
-              <div class="status"><span class="dot ok" id="s-stripe"></span> Stripe</div>
-              <div class="status"><span class="dot ok" id="s-openai"></span> OpenAI</div>
+            <div class="belt" id="priceBelt" aria-label="Live coin prices">
+              <div class="belt-track" id="beltTrack"></div>
+              <div class="belt-track" id="beltTrackClone" aria-hidden="true"></div>
             </div>
           </div>
+
+          <!-- NOTE: removed the statusbar with WS/Redis/Stripe/OpenAI -->
         </div>
 
         <div class="panel">
           <div class="chart-wrap" aria-label="BTC/USDT price chart">
             <div class="chart-head">
               <div class="pair">BTC/USDT <span class="badge" id="btcNow">$—</span></div>
-              <div class="chip" id="chartHint">Live demo feed</div>
+              <div class="chip" id="chartHint">CoinGecko feed</div>
             </div>
             <canvas id="chart" width="800" height="220"></canvas>
           </div>
@@ -65,32 +62,14 @@
     <section class="section" id="features">
       <div class="container">
         <h2>Purpose-Built for Speed & Resilience</h2>
-        <p class="lead">We designed CryptoTradingX around low-latency execution and quota-smart architecture inspired by our API troubleshooting sessions.</p>
+        <p class="lead">We designed CryptoTradingX around low-latency execution and quota-smart architecture.</p>
         <div class="grid" role="list">
-          <article class="card" role="listitem">
-            <h3>Live WebSocket Engine</h3>
-            <p>Streaming quotes with fallback to local simulation. When a feed blips, we auto-reconnect — no frozen tickers.</p>
-          </article>
-          <article class="card" role="listitem">
-            <h3>Redis-Assisted Caching</h3>
-            <p>Cache hot endpoints server-side to slash provider calls and avoid hitting plan limits during traffic spikes.</p>
-          </article>
-          <article class="card" role="listitem">
-            <h3>Stripe-Ready Onboarding</h3>
-            <p>Plan tiers mapped to Stripe products. Fail gracefully with idempotent retries on webhooks & checkout.</p>
-          </article>
-          <article class="card" role="listitem">
-            <h3>AI Insight Modules</h3>
-            <p>Plug in OpenAI for summaries and alerts. If a key is invalid or revoked, our UI surfaces it fast with guidance.</p>
-          </article>
-          <article class="card" role="listitem">
-            <h3>Error-First UX</h3>
-            <p>Clear toasts and an exponential backoff when 429s appear — so users know what’s happening and when.</p>
-          </article>
-          <article class="card" role="listitem">
-            <h3>Secure by Default</h3>
-            <p>JWT-based auth, rate-limiters, and safe defaults. Works great with your Node/Express + Redis stack.</p>
-          </article>
+          <article class="card" role="listitem"><h3>Live WebSocket Engine</h3><p>Streaming quotes with fallback to CoinGecko when Demo is ON.</p></article>
+          <article class="card" role="listitem"><h3>Redis-Assisted Caching</h3><p>Cache hot endpoints server-side to slash provider calls.</p></article>
+          <article class="card" role="listitem"><h3>Stripe-Ready Onboarding</h3><p>Plan tiers mapped to Stripe products with idempotent retries.</p></article>
+          <article class="card" role="listitem"><h3>AI Insight Modules</h3><p>Plug in OpenAI for summaries and alerts.</p></article>
+          <article class="card" role="listitem"><h3>Error-First UX</h3><p>Clear toasts and exponential backoff for 429s.</p></article>
+          <article class="card" role="listitem"><h3>Secure by Default</h3><p>JWT auth, rate-limiters, and safe defaults.</p></article>
         </div>
       </div>
     </section>
@@ -98,41 +77,11 @@
     <section class="section" id="pricing">
       <div class="container">
         <h2>Simple, Scalable Pricing</h2>
-        <p class="lead">Start free, then scale as your trading grows. All plans include WebSockets and caching.</p>
+        <p class="lead">Start free, then scale as your trading grows.</p>
         <div class="pricing">
-          <div class="price">
-            <span class="tag">Starter</span>
-            <div class="big">$0</div>
-            <small style="color:#9fb3da">/ mo</small>
-            <ul>
-              <li>Mock prices & demo mode</li>
-              <li>Community support</li>
-              <li>Basic charts</li>
-            </ul>
-            <a class="btn" href="/auth/auth.html">Get Started</a>
-          </div>
-          <div class="price" style="border-color:#1f3b5f; background:linear-gradient(180deg, rgba(14,165,233,.15), rgba(14,165,233,.05))">
-            <span class="tag">Pro</span>
-            <div class="big">$29</div>
-            <small style="color:#9fb3da">/ mo</small>
-            <ul>
-              <li>Live exchange feed</li>
-              <li>Priority API pool</li>
-              <li>1M cached requests</li>
-            </ul>
-            <a class="btn" href="/auth/auth.html">Upgrade</a>
-          </div>
-          <div class="price">
-            <span class="tag">Enterprise</span>
-            <div class="big">Custom</div>
-            <small style="color:#9fb3da">—</small>
-            <ul>
-              <li>Dedicated quota & SLAs</li>
-              <li>Private endpoints</li>
-              <li>White-glove onboarding</li>
-            </ul>
-            <a class="btn" href="/auth/auth.html">Contact Sales</a>
-          </div>
+          <div class="price"><span class="tag">Starter</span><div class="big">$0</div><small style="color:#9fb3da">/ mo</small><ul><li>Mock/demo</li><li>Community support</li><li>Basic charts</li></ul><a class="btn" href="/auth/auth.html">Get Started</a></div>
+          <div class="price" style="border-color:#1f3b5f; background:linear-gradient(180deg, rgba(14,165,233,.15), rgba(14,165,233,.05))"><span class="tag">Pro</span><div class="big">$29</div><small style="color:#9fb3da">/ mo</small><ul><li>Live feed</li><li>Priority API pool</li><li>1M cached requests</li></ul><a class="btn" href="/auth/auth.html">Upgrade</a></div>
+          <div class="price"><span class="tag">Enterprise</span><div class="big">Custom</div><small style="color:#9fb3da">—</small><ul><li>Dedicated quota & SLAs</li><li>Private endpoints</li><li>White-glove onboarding</li></ul><a class="btn" href="/auth/auth.html">Contact Sales</a></div>
         </div>
       </div>
     </section>
@@ -140,18 +89,13 @@
     <section class="section" id="faq">
       <div class="container">
         <h2>Frequently Asked Questions</h2>
-
-        <!-- The list will be rendered by landing.js -->
-        <div id="faqList" class="faq-list" role="list">
-          <!-- FAQ items inserted here -->
-        </div>
-
-        <!-- (Optional) small note -->
+        <div id="faqList" class="faq-list" role="list"></div>
         <p class="lead" style="color:#9fb3da; margin-top:16px">
           Don’t see your question? <a href="/auth/auth.html">Contact us</a> or email support.
         </p>
       </div>
     </section>
+  </main>
 
   <footer>
     <div class="container" style="display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap">
@@ -164,7 +108,7 @@
     </div>
   </footer>
 
-  <script defer src="../config.js"></script>
-  <script defer src="landing.js"></script>  
+  <script defer src="/config.js"></script>
+  <script defer src="/landing/landing.js"></script>
 </body>
 </html>
