Added ai agent for help

--- a/Frontend/markets/market.html
+++ b/Frontend/markets/market.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
   <link rel="stylesheet" href="../modal/modal.css" />
   <link rel="stylesheet" href="market.css" />
+  <link rel="stylesheet" href="../ai/chat.css" />
 </head>
 <body class="page">
   <header class="topbar">
@@ -82,5 +83,6 @@
   <script src="../utils.js"></script>
   <script src="../modal/modal.js"></script>
   <script src="market.js"></script>
+  <script src="../ai/chat.js"></script>
 </body>
 </html>
